fix(test): replace Java 21 getFirst() with get(0) for Java 17 compat
CI targets Java 17; List.getFirst() requires Java 21.